# cpp_monitoring

./: .gitignore  .hgignore  DIRECTORIES.md  Doxyfile  README.md  meson.build  meson_options.txt
ausarbeitung/: Makefile  client.md  images.md  koenigsreiter.md  server.md
ausarbeitung/UMLs/: client_class_hierarchy.puml  monitor_variations.puml  server_class_hierarchy.puml  server_mainloop.puml  start_sequence.puml
include/client/: json_parser.hpp  listener.hpp
include/common/: logger.hpp  networking.hpp
include/server/: grpc_server.hpp  health_checker.hpp  http_monitor.hpp  monitor.hpp  pop3_monitor.hpp  tcp_monitor.hpp  telnet_monitor.hpp  udp_monitor.hpp
src/: messages.proto
src/client/: json_parser.cpp  listener.cpp  main.cpp
src/server/: grpc_server.cpp  health_checker.cpp  http_monitor.cpp  main.cpp  monitor.cpp  pop3_monitor.cpp  tcp_monitor.cpp  telnet_monitor.cpp  udp_monitor.cpp
